# vsputils

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
python/: pyproject.toml
python/tests/: test_aero.py  test_runner.py  test_vsputils.py
python/tests/resources/: .gitignore  cases.json  empty_cases.json  runner.yaml  simple.polar  simple.vspaero
python/vsputils/: aero.py  airfoil.py  plot.py  runner.py  vsputils.py
scripts/: mbuild.sh  mpython.sh
tests/: test_aero.py  test_vsputils.py
tests/resources/: cases.json  invalid.yml  simple.lod  simple.vsp3  simple_DegenGeom.lod  simple_DegenGeom.polar  simple_DegenGeom.vspaero  valid.yml
vsputils/: aero.py  vsputils.py
vsputils/schemas/: cases.json
