[project]
name = "vsputils"
version = "0.0.1"
description = ""
authors = [
  { name="Hidden", email="ketakopter@gmail.com" },
]
dependencies = [
  "numpy",
  "pandas",
  "spq",
  "pyyaml",
  "jsonschema",
  "pytest",
  "pytest-cov"
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vsputils*"]

[tool.setuptools.package-data]
vsputils = ["schemas/*.json"]

[tool.pytest.ini_options]
addopts = [
  "--cov=vsputils",
  "--cov=tests",
  "--cov-report=xml",
]
